--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -87,3 +87,23 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.diamondsContainer {
+  display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+
+}.diamond {
+  display: block;
+  width: calc(33% - 28px - 10px);
+  border: 1px solid grey;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  padding: 15px;
+  min-width: 200px;
+  
+}
+.diamond img {
+  width: 33%;
+}
