--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -95,7 +95,9 @@ button:focus-visible {
     width: 100%;
 
 }.diamond {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: calc(33% - 28px - 10px);
   border: 1px solid grey;
   border-radius: 15px;
@@ -105,5 +107,16 @@ button:focus-visible {
   
 }
 .diamond img {
-  width: 33%;
+  width: 50%;
+  align-self: center;
+  border-radius: 15px;
+}
+.diamond h3 {
+  width: 100%;
+  text-align: center;
+}
+.diamond ul{
+  list-style: none;
+  padding-left: 0;
+  text-align: left;
 }
