--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -114,6 +114,14 @@ button:focus-visible {
 .diamond h3 {
   width: 100%;
   text-align: center;
+  margin-bottom: 5px;
+}
+.diamond h4 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  color: green;
 }
 .diamond ul{
   list-style: none;
